# botkit

./: .copywrite.hcl  .dockerignore  .gitignore  Dockerfile  LICENSE  config.example.yaml  main.py  pyproject.toml  readme.md  renovate.json  requirements.txt  test.py
.github/workflows/: CI-CD.yaml  docker.yaml  license.yaml  lint.yaml  test.yaml  update_dependencies.yaml
guides/: getting-started.md
scripts/: __init__.py
scripts/check_listings/: __init__.py  __main__.py  main.py
scripts/check_listings/listings/: DiscordAppDirectory.py  DiscordBotListCom.py  DiscordBotsGg.py  DiscordMe.py  DiscordsCom.py  DisforgeCom.py  Listing.py  TopGg.py  WumpusStore.py  __init__.py
src/: __main__.py  start.py
src/config/: __init__.py  bot_config.py
src/custom/: __init__.py
src/extensions/add-dm/: __init__.py  main.py  readme.md
src/extensions/branding/: __init__.py  branding.py  readme.md
src/extensions/listings/: __init__.py  main.py  readme.md
src/extensions/nice-errors/: __init__.py  handler.py  main.py  patch.py  readme.md  translations.yml
src/extensions/ping/: __init__.py  ping.py  readme.md  translations.yml
src/extensions/status-post/: __init__.py  main.py  readme.md
src/extensions/topgg/: __init__.py  readme.md  topgg.py
src/i18n/: __init__.py  classes.py  utils.py
src/log/: __init__.py  logger.py
src/logging/: logger.py
src/utils/: __init__.py  extensions.py  iterator.py  misc.py  setup_func.py
tests/: __init__.py  schema_test.py
