[project]
name = "botkit"
version = "0.1.0"
description = "Botkit: An Advanced Framework for Crafting Sophisticated Discord Bots with py-cord"
authors = [
    {name = "Paillat-dev", email = "me@paillat.dev"},
]
dependencies = [
    "py-cord>=2.5.0",
    "aiohttp>=3.9.5",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.5",
    "pytz>=2024.1",
    "typing-extensions>=4.12.2",
    "schema>=0.7.7",
    "hypercorn>=0.17.3",
    "quart>=0.19.6",
    "pydantic>=2.9.2",
    "coloredlogs>=15.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
sentry = [
    "sentry-sdk>=2.15.0",
]
[tool.pdm.scripts]
format = "ruff format ."
lint = "ruff check --fix ."
export = "pdm export -o requirements.txt --without-hashes --prod"
tests = "pytest tests"
start = "python src"
check-listings = {call = "scripts:check_listings.main"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "beautifulsoup4>=4.12.3",
    "nodriver>=0.32",
    "markdown>=3.6",
    "termcolor>=2.4.0",
    "basedpyright>=1.18.3",
    "ruff>=0.6.9",
]

[tool.pyright]
reportAny = false
reportUnusedCallResult = false
pythonVersion = "3.11"
